--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,7 +31,7 @@ input{
 }
 
 main{
-  @apply px-5 lg:px-40;
+  @apply px-5 lg:px-60;
   /* @apply xl:px-30; */
   /* display: flex */
   
